# ngp-baseline-torch

./: .gitignore  PROJECT_DESIGN.md  README.md  VISUALIZATION_IMPLEMENTATION.md  example_debug_server.py  example_render.py  example_train.py  example_train_fixed.py  example_train_optimized.py  example_train_with_visualization.py  pyproject.toml  run_tests.py  test_visualization.py  validate_fixes.py
src/ngp_baseline_torch/: __init__.py  config.py  data_utils.py  device.py  factory.py  logger.py  rng.py  types.py
src/ngp_baseline_torch/artifact/: __init__.py  export_v0.py
src/ngp_baseline_torch/encoder/: __init__.py  hashgrid_torch.py  pe.py
src/ngp_baseline_torch/field/: __init__.py  heads.py  mlp.py
src/ngp_baseline_torch/grid/: __init__.py  occupancy.py
tests/: README_TESTS.md  conftest.py  test_2_integrator.py  test_3_training_components.py  test_4_e2e_convergence.py  test_artifact_export_v0.py  test_config.py  test_data_utils.py  test_device.py  test_encoder.py  test_encoder_hashgrid.py  test_encoder_pe.py  test_end_to_end_render_psnr_quick.py  test_factory.py  test_field.py  test_field_mlp_and_heads.py  test_grad_check_small_batch.py  test_grid.py  test_grid_occupancy.py  test_integration.py  test_integrator.py  test_integrator_compositor_analytic.py  test_integrator_training_loop_sanity.py  test_loss.py  test_loss_rgb.py  test_opt_adam.py  test_perf_microbench.py  test_rays.py  test_rays_and_cameras.py  test_reproducibility.py  test_rng.py  test_rng_and_device.py  test_runtime_train_step.py  test_training.py  test_types.py  test_types_and_config.py
(+17 files in other folders)
